# Fashion_recommendation

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  config.py  fine_tune.py  recommend.py
backend/app/services/: feature_extractor.py  fine_tune_extractor.py  image_repo.py  similarity.py
frontend/: Dockerfile  dashboard.html  index.html  signup.html
frontend/css/: style.css
frontend/js/: app.js
