[project]
name = "outfit-recommendation"
version = "1.0.0"
description = "Smart outfit recommendation system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.5.0",
    "tensorflow>=2.16.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv]
index-strategy = "first-index"
